# Aethelgard

./: .aethelgard-context.md  .ai_orchestration_protocol.md  .ai_rules.md  .claudeignore  .clinerules.md  .cursorrules  .gitignore  .tmp_validate_output.txt  AETHELGARD_MANIFESTO.md  ARCHITECTURE_LEDGER.md  BACKLOG.md  GEMINI.md  INDICE_ARCHIVOS_LIMPIOS.md  README.md  ROADMAP.md  SESION_CONTINUACION.md  SHADOW_ANALYSIS_EXHAUSTIVE.json  SHADOW_MODE_ANALYSIS.md  TEST_PLAN_FEEDBACK_LOOP.md  TRADE_CLOSURE_LISTENER_DESIGN.md  TRADE_LISTENER_OVERVIEW.md  check_db.py  check_db_tables.py  check_syntax.py  commit_fase1.py  dashboard_errors.txt  dashboard_logs.txt  example_live_system.py  example_orchestrator.py  example_risk_manager.py  example_usage.py  main.py  mypy.ini  pyproject.toml  requirements.txt  run_fase1_validation.ps1  run_fase1_validation.py  run_scanner.py  run_validation.bat  start.py  (+15 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
config/: config.json  data_providers.example.env  data_providers.json  dynamic_params.json  instruments.json  modules.json  risk_settings.json  telegram.example.env
connectors/: __init__.py  alpha_vantage_provider.py  alphavantage_provider.py  auto_provisioning.py  base_connector.py  bridge_mt5.py  bridge_nt8.cs  ccxt_provider.py  connector_factory.py  ctrader_connector.py  data_provider_manager.py  economic_adapters.py  economic_data_gateway.py  finnhub_provider.py  fix_connector.py  generic_data_provider.py  iex_cloud_provider.py  mt5_connector.py  mt5_data_provider.py  mt5_event_adapter.py  mt5_wrapper.py  (+8 more)
(+777 files in other folders)
